# native-toolchain

./: CMakeLists.txt  README.md  flake.nix
.github/actions/build-toolchain/: action.yml
.github/workflows/: build.yml  release.yml
package/: CMakeLists.txt
package/autoconf/: CMakeLists.txt
package/autoconf-archive/: CMakeLists.txt
package/automake/: CMakeLists.txt
package/binutils/: 0001-fix-pthread-once.patch  CMakeLists.txt
package/gawk/: CMakeLists.txt
package/gcc/: CMakeLists.txt  br_real.cmake  install_bin.cmake
package/gmp/: CMakeLists.txt
package/gperf/: CMakeLists.txt
package/isl/: CMakeLists.txt
package/libtool/: CMakeLists.txt
package/m4/: CMakeLists.txt
package/mpc/: CMakeLists.txt
package/mpfr/: CMakeLists.txt
package/pkgconf/: CMakeLists.txt  pkg-config.cmake
package/wayland/: CMakeLists.txt  fix-dtddata.macos.patch
sysroot/: CMakeLists.txt  relocate-sdk.patch
toolchain/: CMakeLists.txt  fix-rpath.macos.sh  toolchain-wrapper-links.cmake
