function(br_get_var PATH VAR OUT_VAR)
    file(STRINGS "${buildroot-nc4_SOURCE_DIR}/${PATH}" FIND_LINE REGEX "^${VAR} = (.*)$")
    if (NOT FIND_LINE)
        unset(${OUT_VAR} PARENT_SCOPE)
        return()
    endif ()
    string(REGEX REPLACE "^${VAR} = (.*)$" "\\1" VAR_VALUE "${FIND_LINE}")
    set(${OUT_VAR} "${VAR_VALUE}" PARENT_SCOPE)
endfunction()

add_subdirectory(gperf)
add_subdirectory(m4)
add_subdirectory(autoconf)
add_subdirectory(autoconf-archive)
add_subdirectory(automake)

add_subdirectory(gmp)
add_subdirectory(mpfr)
add_subdirectory(mpc)
add_subdirectory(isl)
add_subdirectory(libtool)

add_subdirectory(binutils)
add_subdirectory(gcc)
add_subdirectory(pkgconf)
add_subdirectory(gawk)

add_subdirectory(wayland)